add speed edit tab

--- a/index.html
+++ b/index.html
@@ -35,7 +35,17 @@
 
     </div>
 
-    <div id="config-wrapper" class="wrapper"></div>
+    <div id="config-wrapper" class="wrapper">
+        <label for="speed">Speed: </label>
+        <select id="speed">
+            <option value="50">50ms</option>
+            <option selected value="100">100ms</option>
+            <option value="200">200ms</option>
+            <option value="300">300ms</option>
+            <option value="400">400ms</option>
+            <option value="500">500ms</option>
+        </select>
+    </div>
 
     <script src="script.js"></script>
 </body>
