--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
     </div>
 
     <div id="config-wrapper" class="wrapper">
+        <h3>Settings</h3>
         <label for="speed">Speed: </label>
         <select id="speed">
             <option value="50">50ms</option>
