add rotate func

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                 <div id="status-icon"></div>
                 <button id="start-button">Start</button>
                 <button id="stop-button">Stop</button>
+                <button disabled id="rotate-button">Rotate</button>
                 <button id="reset-button">Reset</button>
             </div>
         </div>
